# solar-collector-3-line

./: .gitignore  DEVELOPMENT_LOG.md  README.md  pyproject.toml  run_simulation_live.py  run_simulation_ol.py
docs/: excel_workbook.md  simulation_step_graph.md  solar_collector_model.md
excel/macros/: Module1.vba  Module2.vba  index.txt
src/: model.py  plot_utils.py  simulation.py
src/solar_collector/: casadi_ctrls.py  casadi_model.py  live_sim.py  model.py  simulation.py
tests/: test_casadi_model.py  test_data.yml  test_model.py
tools/: extract_vba.py
